# student-trade-app-live-event-library

./: .env  LICENSE.txt  README.md  application.py  pyproject.toml  setup.cfg  threadTest.py
feedback/: Scheduler.py
src/: application.py
src/dynamodb_feeds_to_sqs.egg-info/: PKG-INFO  SOURCES.txt
src/feedback/: DataFormation.py  GetData.py  Scheduler.py  __init__.py  applicationScheduler.py
src/test_raasalghul.egg-info/: PKG-INFO  SOURCES.txt
